examples/errors/compile-error/bad2.vc

let x: Int = x; // <- no variable `x` yet
let y: Int = x;

func main(): Int { // <- wrong main signature

}
